# dirscribe

./: .gitignore  Cargo.toml  LICENSE  README.md  dirscribe2.txt  summary-anthropic.txt  summary-ollama.txt
dev/: roadmap.txt
prompts/: summary-0.1.txt  summary-0.2.txt  summary-diff-0.1.txt  summary-keywords-0.1.txt
src/: cli.rs  file_processing.rs  git.rs  io.rs  main.rs  output.rs  prompt_handling.rs  summary.rs  validation.rs
tests/: cli_test.rs
tests/data/: ground-truth-diff.txt  ground-truth.txt
tests/integration/: cli_test.rs
