[package]
name = "dirscribe"
version = "1.1.3"
edition = "2021"
authors = ["Leon Luithlen"]
description = "A CLI tool that combines contents of files with specific extensions from a directory"
readme = "README.md"
homepage = "https://github.com/0xideas/dirscribe"
repository = "https://github.com/0xideas/dirscribe"
license = "MIT"
keywords = ["cli", "files", "directory", "concatenate", "utility"]
categories = ["command-line-utilities", "filesystem"]
# Include prompts directory in the published package
include = [
    "src/**/*",
    "Cargo.toml",
    "README.md",
    "prompts/**/*"
]

[dependencies]
walkdir = "2.3"
ignore = "0.4"
serde_json = "1.0"
clap = { version = "4.4", features = ["derive"] }
git2 = "^0.19.0"
clipboard = "0.5.0"
rayon = "^1.10.0"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
tokio = { version = "1.43", features = ["full"] }
chrono = "^0.4.39"

[dev-dependencies]
assert_fs = "1.0"
predicates = "3.0"
similar = "2.2"

[[bin]]
name = "dirscribe"
path = "src/main.rs"